--- a/flashcms/package.json
+++ b/flashcms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickcms",
+  "name": "flashcms",
   "version": "1.0.0",
   "description": "A Vuetify project running in Cordova",
   "author": "amanadhikari <amanadhikari2@gmail.com>",
