--- a/flashcms/package.json
+++ b/flashcms/package.json
@@ -19,16 +19,25 @@
     "android-vm": "npm run build && cordova run android"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
     "@sinonjs/formatio": "^2.0.0",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.0.18",
-    "vue-cordova": "^0.1.2",
-    "vue-head": "^2.0.12",
+    "axios": "^0.18.0",
     "cordova-plugin-device": "^2.0.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
-    "uuid": "^3.2.1"
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
+    "uuid": "^3.2.1",
+    "vue": "^2.5.16",
+    "vue-cordova": "^0.1.2",
+    "vue-head": "^2.0.12",
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.0.18",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
