--- a/flashcms/package.json
+++ b/flashcms/package.json
@@ -31,6 +31,7 @@
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "uuid": "^3.2.1",
+    "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.16",
     "vue-cordova": "^0.1.2",
     "vue-head": "^2.0.12",
