--- a/flashcms/.gitignore
+++ b/flashcms/.gitignore
@@ -1,20 +1,17 @@
 .DS_Store
 node_modules/
-dist/
-platforms/
-plugins/
-www/
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-test/unit/coverage
-test/e2e/reports
+/test/unit/coverage/
+/test/e2e/reports/
 selenium-debug.log
 
 # Editor directories and files
-.idea/
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.swp
