--- a/flashcms/package.json
+++ b/flashcms/package.json
@@ -14,7 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
     "element-ui": "^2.4.6",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
+    "vee-validate": "^2.1.0-beta.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
