--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flshcmsapi",
+  "name": "flashcmsapi",
   "version": "1.0.0",
   "description": "Serverless REST API with MongoDB using Mongoose and Bluebird",
   "main": "handler.js",
