--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "dotenv": "^6.1.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^4.9.6",
     "validator": "^7.0.0"
   },
