--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "npm": "^6.4.1",
     "vee-validate": "^2.1.0-beta.9",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.3",
     "vue-drawer-layout": "^0.3.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.3",
