--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -103,3 +103,11 @@ functions:
            path: field/post
            method: post
            cors: true
+
+  getFields:
+    handler: handlers/FieldHandler.getFields
+    events:
+      - http:
+          path: field/get/{id}
+          method: get
+          cors: true
