--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,9 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
     "browser-sync": "^2.24.7",
+    "filepond": "^3.2.5",
+    "filepond-plugin-file-validate-type": "^1.2.0",
+    "filepond-plugin-image-preview": "^3.1.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^3.10.0",
@@ -34,6 +37,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
     "vue-drawer-layout": "^0.3.2",
+    "vue-filepond": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.3",
     "vuex": "^3.0.1",
