--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "release": "npm run build && npm run deploy",
+    "deploy": "node node_modules/s3-deploy/.bin/s3-deploy './dist/**' --cwd './dist/' --region ap-south-1 --bucket flash-cms --profile flash-cms"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
@@ -19,8 +21,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "aws-config": "^1.2.0",
+    "aws-sdk": "^2.384.0",
     "axios": "^0.18.0",
     "browser-sync": "^2.24.7",
+    "dotenv": "^6.2.0",
     "filepond": "^3.2.5",
     "filepond-plugin-file-validate-type": "^1.2.0",
     "filepond-plugin-image-preview": "^3.1.1",
@@ -32,7 +37,10 @@
     "i": "^0.3.6",
     "material-design-icons": "^3.0.1",
     "module": "^1.2.5",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "npm": "^6.4.1",
+    "uuid": "^3.3.2",
     "vee-validate": "^2.1.0-beta.9",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
@@ -88,6 +96,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "s3-deploy": "^1.2.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
